@@ -19,8 +19,8 @@ remove = Exporter
 remove = File::Spec
 remove = FindBin
 
-[Prereqs]
-FFI::Raw = 0
+;[Prereqs]
+;FFI::Raw = 0
 
 [Author::Plicease::Upload]
 cpan = 1
